--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,41 +4,38 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Fixar Estabelecimento 
+      <br> e Cliente
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+  <ion-list>
+    <ion-list-header>Selecione o Estabelecimento</ion-list-header>
+  
+    <ion-item>
+      <ion-label>Estabelecimento</ion-label>
+      <ion-select placeholder="Selecione Um">
+        <ion-select-option value="m">01 - Unilog Matriz</ion-select-option>
+        <ion-select-option value="f">02 - Unilog Filial</ion-select-option>
+        <ion-select-option value="i">04 - Agila Import</ion-select-option>
+        <ion-select-option value="g">05 - Unilog G4</ion-select-option>
+      </ion-select>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Selecione o Depositante</ion-label>
+      <ion-select placeholder="Selecione Um" okText="Confirmar" cancelText="Cancelar">
+        <ion-select-option value="s">Servier</ion-select-option>
+      </ion-select>
+    </ion-item>
+    
+  
+  </ion-list> 
+
+  <ion-button expand="block" routerLink="/login" routerDirection="forward" class="ion-text-center">
+    confirmar
+  </ion-button>
+  
 </ion-content>
